--- a/apunte.html
+++ b/apunte.html
@@ -45,7 +45,7 @@
           <div class="container-fluid d-flex align-items-center">
             <h1 class="d-flex align-items-center fs-4 text-white mb-0">
                 ProgramBI - Curso SQL Server Básico / Intermedio</h1>
-            <a href="index2.html" class="ms-auto link-light" hreflang="ar">
+            <a href="index.html" class="ms-auto link-light" hreflang="ar">
                 <img src="logo.png" width="50">
             </a>
           </div>
